--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -12,6 +12,7 @@
     width: 450px;
     height: 350px;
     margin-bottom: 20px;
+    margin-left: 25px;
 }
 
 #list-li img{
@@ -31,7 +32,7 @@
 }
 
 #my-list-div{
-    height: 100%;
+    height: auto;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -42,8 +43,10 @@
     display: flex;
     flex-direction: column;
     padding-left: 20px;
-    padding-top: 15px;
+    padding-top: 25px;
     height: auto;
+    min-height: 100%;
+   
 }
 
 #list-empty{
@@ -60,7 +63,7 @@
 }
 
 .hidden {
-    opacity: 0;
+    opacity: 1;
     
 }
 
@@ -81,7 +84,7 @@
     width: 200px;
     position: absolute;
     margin-top: 60px;
-    left: 55px;
+    left: 85px;
     z-index: 5;
     text-align: center;
     display: flex;
@@ -96,7 +99,7 @@
     z-index: 5;
     position: absolute;
     margin-top: 60px;
-    left: 15px;
+    left: 45px;
     padding: 5px;
     border-radius: 50%;
     opacity: 0;
