added buffering symbol

--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -730,6 +730,23 @@ h1, h2, h3, h4, h5, h6, a, div {
     // background: linear-gradient(to left,#000,transparent);
 }
 
+.loader {
+    border: 8px solid #f3f3f3; /* Light grey */
+    
+    border-top: 8px solid blue;
+    border-bottom: 8px solid blue;
+      
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 .detail-row-show img{
     width: 65%;
     height: 350px;
