--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6, a, div {
     flex-direction: row;
     justify-content: center;
     height: 200px;
-    width: 100%;
+    width: 100vw;
 }
 
 .my-list-item {
