--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -105,13 +105,20 @@
     opacity: 0;
 }
 
+// .index-check{
+//     display: none;
+//     opacity: 0;
+// }
+
 .add-remove-div{
     color: white;
     // background-color: black;
     width: 100px;
     height: 28px;
     font-size: 14px;
-    display: flex;
+    // display: flex;
+    display: none;
+    opacity: 0;
     justify-content: center;
     align-items: center;
     margin-left: 40px;
