--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -7,6 +7,7 @@ h1, h2, h3, h4, h5, h6, a, div {
     height: 100%;
 }
 
+
 .my-lists-row{
     display: flex;
     flex-direction: row;
@@ -448,6 +449,7 @@ h1, h2, h3, h4, h5, h6, a, div {
     position: absolute;
     cursor: pointer;
     display: none;
+    opacity: 0;
     margin-top: 130px;
     margin-left: 45%;
     
@@ -824,6 +826,7 @@ h1, h2, h3, h4, h5, h6, a, div {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -841,7 +844,9 @@ h1, h2, h3, h4, h5, h6, a, div {
     height: 35px;
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
+    // display: flex;
+    display: none;
+    opacity: 0;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
