--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -589,7 +589,8 @@ h1, h2, h3, h4, h5, h6, a, div {
     position: absolute;
     top: 140px;
     left: 12px;
-    width: 35%;
+    width: 90%;
+   
 }
 
 .featured-video-title-div {
@@ -744,6 +745,9 @@ h1, h2, h3, h4, h5, h6, a, div {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    height: 100%;
+    width: 100%;
+    background-color: #000000;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -889,6 +893,7 @@ h1, h2, h3, h4, h5, h6, a, div {
     overflow-y: hidden;
     height: 100%;
     position: relative;
+    background-color: #000000;
    
 }
 
