added icon to tab

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <%= favicon_link_tag asset_path('favicon.ico') %>
     <title>PatrickFlix - Watch the hottest, Patrick exclusive movies and tv</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
