--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -77,20 +77,11 @@
   justify-content: flex-end;
 }
 
-#log-out-modal-show {
-  opacity: 1;
+#log-out-modal {
   z-index: 5;
   height: 50px;
   width: 75px;
   margin-top: 85px;
-}
-
-#log-out-modal-hide {
-  opacity: 0;
-  height: 50px;
-  width: 75px;
-  margin-top: 85px;
-  z-index: 1;
 }
 
 #search-div-hide {
